--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@
   --secondary-font: 'Open Sans', sans-serif;
   --transition: all 0.3s;
   --spacing: 0.1rem;
-  --border-radius: 15px;
+  --radius: 15px;
   --drop-shadow: 0 5px 12px rgba(0, 0, 0, 0.2);
 }
 
@@ -103,7 +103,7 @@ nav ul li a:hover {
 .image img {
   width: 90%;
   margin-bottom: 20px;
-  border-radius: 15px;
+  border-radius: var(--radius);
 }
 
 button {
@@ -111,5 +111,6 @@ button {
   background: var(--main-color);
   color: var(--white-color);
   font-size: 1rem;
-  border-radius: 15px;
+  letter-spacing: var(--spacing);
+  border-radius: var(--radius);
 }
