--- a/src/style.css
+++ b/src/style.css
@@ -107,7 +107,7 @@ hr {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
-  grid-column-gap: 40px;
+  grid-column-gap: 50px;
 }
 
 .card {
@@ -130,6 +130,11 @@ button {
   border-radius: var(--radius);
 }
 
+button:hover {
+  background: var(--secondary-color);
+  color: var(--white-color);
+}
+
 .comment-likes {
   display: flex;
   align-items: center;
@@ -139,6 +144,10 @@ button {
 .comment-likes i {
   font-size: 1rem;
   margin-left: -20px;
+}
+
+.comment-likes i:hover {
+  color: var(--secondary-color);
 }
 
 .comment-likes span {
